Created working resize to width

--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
     "uglify-js": "^2.7.0"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   }
 }
