--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "prod": "gulp --production",
     "dev": "gulp watch",
-    "prepublish": "npm run prod"
+    "test": "gulp; babel dist/ImageSize.js -o dist/ImageSize.js; uglifyjs dist/ImageSize.js -c warnings=false -m > dist/ImageSize.min.js"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
     "uglify-js": "^2.7.0"
