--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "@lassehaslev/imagesizerjs",
   "version": "0.1.8",
   "description": "Adds image size options to filname ( Automaticly ads -{width}x{height}-resize to filename ).",
-  "main": "dist/ImageSize.js",
+  "main": "dist/ImageSizer.js",
   "author": "Lasse S. Haslev <lasse@haslev.no>",
   "license": "ISC",
   "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch",
-    "test": "gulp; babel dist/ImageSize.js -o dist/ImageSize.js; uglifyjs dist/ImageSize.js -c warnings=false -m > dist/ImageSize.min.js"
+    "serve": "browser-sync start --server --files 'index.html' 'dist/**/*.*'",
+    "watch-assets": "gulp watch",
+    "dev": "npm-run-all --parallel watch-assets serve",
+    "production": "rm -rf dist/ && mkdir dist && gulp && babel ./dist/ImageSizer.js -o ./dist/ImageSizer.js",
+    "prepublish": "npm run production"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "browser-sync": "^2.18.5",
     "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0",
-    "uglify-js": "^2.7.0"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+    "laravel-elixir": "^6.0.0-15",
+    "laravel-elixir-webpack-official": "^1.0.10",
+    "npm-run-all": "^3.1.2",
+    "open": "^0.0.5"
   }
 }
